--- a/locales/zh-CN.yml
+++ b/locales/zh-CN.yml
@@ -359,6 +359,7 @@ common/views/components/nav.vue:
   repository: "代码库"
   develop: "开发人员"
   feedback: "反馈"
+  terms: "使用条款"
 common/views/components/note-menu.vue:
   mention: "提到"
   detail: "详细信息"
@@ -1313,7 +1314,7 @@ desktop/views/pages/welcome.vue:
   timeline: "时间线"
   announcements: "公告"
   photos: "最近图片"
-  powered-by-misskey: "Powered by <b>Misskey</b>."
+  powered-by-misskey: "Hosted by <a href=\"https://h3z.jp/\" target=\"_blank\">h3zjp</a>"
   info: "信息"
 desktop/views/pages/drive.vue:
   title: "Misskey 网盘"
