--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -359,6 +359,7 @@ common/views/components/nav.vue:
   repository: "Repository"
   develop: "Developers"
   feedback: "Feedback"
+  terms: "Terms"
 common/views/components/note-menu.vue:
   mention: "Mention"
   detail: "Details"
@@ -1313,7 +1314,7 @@ desktop/views/pages/welcome.vue:
   timeline: "Timeline"
   announcements: "Announcements"
   photos: "Recent Images"
-  powered-by-misskey: "Powered by <b>Misskey</b>."
+  powered-by-misskey: "Hosted by <a href=\"https://h3z.jp/\" target=\"_blank\">h3zjp</a>"
   info: "Information"
 desktop/views/pages/drive.vue:
   title: "Misskey storage"
