--- a/locales/fr-FR.yml
+++ b/locales/fr-FR.yml
@@ -359,6 +359,7 @@ common/views/components/nav.vue:
   repository: "Dépôt"
   develop: "Développeurs"
   feedback: "Suggestions"
+  terms: "Conditions d'utilisation"
 common/views/components/note-menu.vue:
   mention: "Mention"
   detail: "Détails"
@@ -1313,7 +1314,7 @@ desktop/views/pages/welcome.vue:
   timeline: "Fil d’actualité"
   announcements: "Notices"
   photos: "Images récentes"
-  powered-by-misskey: "Propulsé par <b>Misskey</b>."
+  powered-by-misskey: "Hébergé par <a href=\"https://h3z.jp/\" target=\"_blank\">h3zjp</a>"
   info: "Informations"
 desktop/views/pages/drive.vue:
   title: "Lecteur de Misskey"
