--- a/locales/no-NO.yml
+++ b/locales/no-NO.yml
@@ -358,7 +358,8 @@ common/views/components/nav.vue:
   donors: "Donatorer"
   repository: "Kodelager"
   develop: "Utviklere"
-  feedback: "フィードバック"
+  feedback: "Tilbakemelding"
+  terms: "Vilkår for bruk"
 common/views/components/note-menu.vue:
   mention: "メンション"
   detail: "Detaljer"
@@ -1313,7 +1314,7 @@ desktop/views/pages/welcome.vue:
   timeline: "タイムライン"
   announcements: "Kunngjøringer"
   photos: "最近の画像"
-  powered-by-misskey: "Powered by <b>Misskey</b>."
+  powered-by-misskey: "Hosted by <a href=\"https://h3z.jp/\" target=\"_blank\">h3zjp</a>"
   info: "Informasjon"
 desktop/views/pages/drive.vue:
   title: "Misskey Drive"
