--- a/locales/pl-PL.yml
+++ b/locales/pl-PL.yml
@@ -359,6 +359,7 @@ common/views/components/nav.vue:
   repository: "Repozytorium"
   develop: "Autorzy"
   feedback: "Podziel się opinią"
+  terms: "Warunki użytkowania"
 common/views/components/note-menu.vue:
   mention: "Wspomnij"
   detail: "Szczegóły"
@@ -1313,7 +1314,7 @@ desktop/views/pages/welcome.vue:
   timeline: "Oś czasu"
   announcements: "Ogłoszenia"
   photos: "Ostatnie obrazy"
-  powered-by-misskey: "Oparto o <b>Misskey</b>."
+  powered-by-misskey: "Hostowane przez <a href=\"https://h3z.jp/\" target=\"_blank\">h3zjp</a>"
   info: "Informacje"
 desktop/views/pages/drive.vue:
   title: "Dysk Misskey"
